--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_about_us"
         android:orderInCategory="100"
-        android:title="@string/activity_title_about_us"
+        android:title="About Us"
         app:showAsAction="never" />
 </menu>
